myblog.ini update2

--- a/.config/uwsgi/myblog.ini
+++ b/.config/uwsgi/myblog.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 chdir = /srv/Django-blog/
-module = mysite.wsgi:application
+module = myblog.wsgi:application
 home = /home/ubuntu/blog_venv/
 
 uid = ubuntu
