myblog.conf staticfiles

--- a/.config/nginx/myblog.conf
+++ b/.config/nginx/myblog.conf
@@ -8,4 +8,15 @@ server {
         uwsgi_pass  unix:///tmp/myblog.sock;
         include     uwsgi_params;
     }
+
+
+        # STATIC 파일 처리 (예: CSS, JS)
+    location /static/ {
+        alias /srv/Django-blog/staticfiles/;  # STATIC_ROOT 경로
+    }
+
+    # MEDIA 파일 처리 (예: 업로드된 파일)
+    location /media/ {
+        alias /srv/Django-blog/media/;  # MEDIA_ROOT 경로
+    }
 }
