--- a/.config/nginx/myblog.conf
+++ b/.config/nginx/myblog.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name *.compute.amazonaws.com;
+    server_name *.compute.amazonaws.com *.devprofessional.xyz;
     charset utf-8;
     client_max_body_size 128M;
 
@@ -10,7 +10,7 @@ server {
     }
 
 
-        # STATIC 파일 처리 (예: CSS, JS)
+    # STATIC 파일 처리 (예: CSS, JS)
     location /static/ {
         alias /srv/Django-blog/staticfiles/;  # STATIC_ROOT 경로
     }
